feat: add deployment support

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist
 /tmp
 /out-tsc
 /bazel-out
+**/dist
 
 # Node
-/node_modules
+**/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -21,7 +21,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
+**/.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -29,6 +29,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
+**/.angular
 /.angular/cache
 .sass-cache/
 /connect.lock
@@ -39,5 +40,5 @@ testem.log
 __screenshots__/
 
 # System files
-.DS_Store
+**/.DS_Store
 Thumbs.db
