--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,13 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-**/.vscode/*
-!.vscode/settings.json
+**/.vscode
+**!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+.vscode/
 
 # Miscellaneous
 **/.angular
@@ -42,3 +43,7 @@ __screenshots__/
 # System files
 **/.DS_Store
 Thumbs.db
+
+#.NET Files
+**/bin
+**/obj
