feat: add GoogleWebView and TapHttpResponse projects

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,19 @@ __screenshots__/
 # System files
 **/.DS_Store
 Thumbs.db
+
+#Android Files
+*.iml
+**.gradle
+**/local.properties
+**/.idea/caches
+**/.idea/libraries
+**/.idea/modules.xml
+**/.idea/workspace.xml
+**/.idea/navEditor.xml
+**/.idea/assetWizardSettings.xml
+**/build
+**/captures
+**.externalNativeBuild
+**.cxx
+**local.properties
