--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,13 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-**/.vscode/*
-!.vscode/settings.json
+**/.vscode
+**!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+.vscode/
 
 # Miscellaneous
 **/.angular
@@ -43,6 +44,9 @@ __screenshots__/
 **/.DS_Store
 Thumbs.db
 
+#.NET Files
+**/bin
+**/obj
 #Android Files
 *.iml
 **.gradle
